EMI/JEI description screens
Added description screens for items, blocks, potions, enchantments and tags (EMI only).